Review o.a.catalina.ha.session and minimise diff
First pass at reducing diff between 9.0.x. 8.5.x and 7.0.x to simplify
backports. Mostly whitespace and NO-OP refactorings.